--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ description = "Lightweight Rust client for Supabase REST and GraphQL"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/floris-xlx/supabase_rs"
+# tests should not be included in the published package
+exclude = ["src/tests/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -41,3 +43,44 @@ native_tls = ["reqwest/native-tls"]
 # # 
 # # 
 # realtime = []
+
+[lints.rust]
+unsafe_code = "deny"
+deprecated = "warn"
+elided_lifetimes_in_paths = "warn"
+rust_2021_prelude_collisions = "warn"
+semicolon_in_expressions_from_macros = "warn"
+trivial_numeric_casts = "warn"
+unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
+unused_extern_crates = "warn"
+unused_import_braces = "warn"
+unused_lifetimes = "warn"
+
+[lints.rustdoc]
+all = "warn"
+missing_crate_level_docs = "warn"
+
+[lints.clippy]
+all = "warn"
+correctness = "warn"
+suspicious = "warn"
+style = "warn"
+complexity = "warn"
+perf = "warn"
+# pedantic = "warn" # Maybe Enable later
+# nursery = "warn" # Maybe Enable later
+
+# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
+allow_attributes = "warn"
+allow_attributes_without_reason = "warn"
+assertions_on_result_states = "warn"
+create_dir = "warn"
+clone_on_ref_ptr = "warn"
+# expect_used = "warn" # Enable later
+missing_assert_message = "warn"
+panic_in_result_fn = "warn"
+str_to_string = "warn"
+todo = "warn"
+unwrap_used = "warn"
+unimplemented = "warn"
+wildcard_enum_match_arm = "warn"
